# Sublime-Text-Cmake-MinGW64-C-Build-System

Main/: C++ Setup.txt  CMakeCache.txt  CMakeLists.txt  Main.sublime-project  Main.sublime-workspace  Makefile  build.bat  clean.bat  cmake_install.cmake  run.bat  toolchain.cmake
Main/src/: Main.cpp
